mlops/eks-rag/rag-system-eks-deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rag-system
  labels:
    name: rag-system
    purpose: aws-eks-rag
    istio-injection: enabled
