mlops/eks-rag/rag-system-eks-deploy/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-frontend
  namespace: rag-system
  labels:
    app: rag-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-frontend
  template:
    metadata:
      labels:
        app: rag-frontend
    spec:
      containers:
      - name: rag-frontend
        image: 615299759525.dkr.ecr.ap-southeast-2.amazonaws.com/aws-eks-rag-weaviate-frontend:stable-v1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: rag-frontend-service
  namespace: rag-system
  labels:
    app: rag-frontend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-name: "rag"
spec:
  type: LoadBalancer
  selector:
    app: rag-frontend
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
