mlops/eks-rag/rag-system-eks-deploy/weaviate-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: weaviate
  namespace: rag-system
spec:
  serviceName: weaviate-service
  replicas: 1
  selector:
    matchLabels:
      app: weaviate
  template:
    metadata:
      labels:
        app: weaviate
    spec:
      containers:
      - name: weaviate
        image: semitechnologies/weaviate:1.25.5
        ports:
        - containerPort: 8082
        command: ["/bin/weaviate"]
        args: ["--host", "0.0.0.0", "--port", "8082", "--scheme", "http"]
        volumeMounts:
        - name: shared-efs
          mountPath: /var/lib/weaviate
          subPath: weaviate_data
        resources:
          requests:
            memory: "1Gi"
            cpu: "50m"
          limits:
            memory: "2Gi"
            cpu: "500m"
      - name: t2v-transformers
        image: semitechnologies/transformers-inference:sentence-transformers-all-MiniLM-L6-v2
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "800Mi"
            cpu: "50m"
          limits:
            memory: "2Gi"
            cpu: "500m"
      volumes:
      - name: shared-efs
        persistentVolumeClaim:
          claimName: efs-chat-history-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: weaviate-service
  namespace: rag-system
spec:
  selector:
    app: weaviate
  ports:
  - name: http
    port: 8080
    targetPort: 8082
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: t2v-transformers
  namespace: rag-system
spec:
  selector:
    app: weaviate
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  type: ClusterIP
