mlops/eks-rag/rag-system-eks-deploy/ingress-openwebui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openwebui-ingress
  namespace: default
  annotations:
    # Ingress Core
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # Grouping
    alb.ingress.kubernetes.io/group.name: unified-alb-group
    alb.ingress.kubernetes.io/group.order: '1'

    # Health Checks
    alb.ingress.kubernetes.io/healthcheck-path: / # OpenWebUI is at root

spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openwebui-service
                port:
                  number: 80
